# lenny-robot

./: CMakeLists.txt  README.md
source/: CMakeLists.txt
source/agents/: CMakeLists.txt
source/agents/include/lenny/agents/: ABBYuMiAgent.h  BDSpotArmAgent.h  BDSpotBaseAgent.h  FloatingBaseAgent.h  FrankaPandaAgent.h  KinovaGen3Agent.h  Robotiq2F85Gripper.h  SakeEZGripper.h  UR5eAgent.h
source/agents/src/: ABBYuMiAgent.cpp  BDSpotArmAgent.cpp  BDSpotBaseAgent.cpp  FloatingBaseAgent.cpp  FrankaPandaAgent.cpp  KinovaGen3Agent.cpp  Robotiq2F85Gripper.cpp  SakeEZGripper.cpp  UR5eAgent.cpp
source/apps/: CMakeLists.txt
source/apps/AgentApp/: CMakeLists.txt  main.cpp
source/apps/AgentApp/include/: AgentApp.h
source/apps/AgentApp/src/: AgentApp.cpp
source/apps/AgentsApp/: CMakeLists.txt  main.cpp
source/apps/AgentsApp/include/: AgentsApp.h
source/apps/AgentsApp/src/: AgentsApp.cpp
source/apps/ControlApp/: CMakeLists.txt  main.cpp
source/apps/ControlApp/include/: ControlApp.h  EmulatorControlInterface.h  PhysicalRobotEmulator.h
source/apps/ControlApp/src/: ControlApp.cpp  EmulatorControlInterface.cpp  PhysicalRobotEmulator.cpp
source/apps/KineLocoApp/: CMakeLists.txt  main.cpp
source/apps/KineLocoApp/include/: KineLocoApp.h
source/apps/KineLocoApp/src/: KineLocoApp.cpp
source/apps/PrimitiveGeneratorApp/: CMakeLists.txt  main.cpp
source/apps/PrimitiveGeneratorApp/include/: PrimitiveGeneratorApp.h
source/apps/PrimitiveGeneratorApp/src/: PrimitiveGeneratorApp.cpp
source/apps/RAPTApp/: CMakeLists.txt  main.cpp
source/apps/RAPTApp/include/: RAPTApp.h
source/apps/RAPTApp/src/: RAPTApp.cpp
source/apps/RobotApp/: CMakeLists.txt  main.cpp
source/apps/RobotApp/include/: RobotApp.h  RobotTests.h
source/apps/RobotApp/src/: RobotApp.cpp
source/apps/RobotTests/: CMakeLists.txt  main.cpp
source/apps/RobotTests/config/: testRobot3.urdf
source/apps/RobotTests/include/: RobotTests.h
source/apps/TestApp/: CMakeLists.txt  main.cpp
source/apps/TestApp/include/: Tests_Control.h  Tests_Robot.h
source/apps/URDFTest/: CMakeLists.txt  URDFTest.h  main.cpp
source/apps/URDFTest/include/: URDFTest.h
source/apps/config/test_robots/: testRobot1.urdf  testRobot2.urdf
source/apps/config/ur_5e/: README.md  default_state.json  robot.urdf
source/apps/config/ur_5e/meshes/: forearm.mtl  shoulder.mtl  wrist1.mtl  (+2 more)
source/apps/helpers/: TestEndEffector.h  TestRobot.h
source/control/: CMakeLists.txt
source/control/src/: BasicTrajectoryTracker.cpp  EmulatorControlInterface.cpp  PhysicalRobotEmulator.cpp  RobotControlInterface.cpp
source/kineloco/: CMakeLists.txt
source/kineloco/src/: ContactPhase.cpp  JointAngleConstraint.cpp  Limb.cpp  LimbInfo.cpp  LimbPositionConstraint.cpp  LocomotionController.cpp  TrackerAgenda.cpp  TrajectoryPlanner.cpp  TrajectoryTracker.cpp
source/rapt/: CMakeLists.txt
source/rapt/src/: Agent.cpp  AgentCollisionParent.cpp  Animator.cpp  Gripper.cpp  WorldCollisionHandler.cpp  WorldCollisionParent.cpp
source/robot/: CMakeLists.txt
source/robot/src/: Base.cpp  EndEffector.cpp  Joint.cpp  Link.cpp  Robot.cpp  Utils.cpp
source/urdf/: CMakeLists.txt  README.md
source/urdf/src/: Geometry.cpp  Joint.cpp  Link.cpp  Material.cpp  Model.cpp  Utils.cpp
(+98 files in other folders)
