if (${LENNY_PROJECT}_BUILD_APPS)
    add_subdirectory(apps)
endif ()
if (NOT TARGET lenny::control)
    add_subdirectory(control)
endif ()
if (NOT TARGET lenny::rapt)
    add_subdirectory(rapt)
endif ()
if (NOT TARGET lenny::robot)
    add_subdirectory(robot)
endif ()
if (NOT TARGET lenny::urdf)
    add_subdirectory(urdf)
endif ()
